--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -1,9 +1,9 @@
 <div class="col input_col" style="width: 50%">
-    <div class="row" style="height: 12%">
+    <div class="row" style="overflow: hidden;">
         <h4 style="margin: 0;">Filter tariffs</h4>
-        <hr style="width: 80%; float: left;">
+        <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
     </div>
-    <div class="row" style="height: 45%">
+    <div class="row" style="overflow: hidden;">
         <div id="left_tariff_col"  class="col" style="width: 40%">
             <div class="label_stacked">Type:</div>
             <div class="label_stacked">State:</div>
@@ -25,11 +25,11 @@
             </select>
         </div>
     </div>
-    <div class="row" style="height: 12%">
+    <div class="row" style="overflow: hidden;">
         <h4 style="margin: 0;">Select tariff</h4>
-        <hr style="width: 80%; float: left;">
+        <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
     </div>
-    <div class="row" style="height: 40%">
+    <div class="row" style="overflow: hidden;">
         <div class="col" style="width: 40%">
             <div class="label_stacked">Tariff:</div>
         </div>
@@ -41,11 +41,11 @@
     </div>
 </div>
 <div class="col input_col" style="width: 50%">
-    <div class="row" style="height: 12%">
+    <div class="row" style="overflow: hidden;">
         <h4 style="margin: 0;">Tariff Details</h4>
-        <hr style="width: 80%; float: left;">
+        <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
     </div>
-    <div class="row" style="height: 48%">
+    <div class="row" style="overflow: hidden;">
         <div class="tariff_panel_header col" style="width: 30%;">
             <div class="name_label label_stacked">Name:&nbsp</div>
             <div class="type_label label_stacked">Type:&nbsp</div>
@@ -57,11 +57,11 @@
             <div class="state_value label_stacked tariff_label">N/A</div>
         </div>
     </div>
-    <div class="row" style="height: 12%">
+    <div class="row" style="overflow: hidden;">
         <h4 style="margin: 0;">Actions</h4>
-        <hr style="width: 80%; float: left;">
+        <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
     </div>
-    <div class="row" style="height: 48%">
+    <div class="row" style="overflow: hidden;">
         <button style="width: 80%; text-align: left; height: 3.25vh;"
                 onclick="get_default_case_name()">Apply tariff to load and create case</button>
         <button style="width: 80%; text-align: left; height: 3.25vh;"
