--- a/templates/index.html
+++ b/templates/index.html
@@ -783,17 +783,18 @@
                         </div>
                         <div class="col" style="width: 80%">
                             <select id="single_variable_chart_type" style="width: 50%">
-                                <option value="Annual Average Profile"> Annual Average Profile</option>
+                                
+                                <option value="Average Annual Profile">Average Annual Profile</option>
                                 <option value="Daily kWh Histogram">Daily kWh Histogram</option>
+                                <option value="Average Load Duration Curve">Average Load Duration Curve</option>
                                 <option value="Monthly Average kWh">Monthly Average kWh</option>
                                 <option value="Seasonal Daily Pattern">Seasonal Daily Pattern</option>
                                 <option value="Monthly Peak Time">Monthly Peak Time</option>
-                                <option value="Average Load Duration Curve">Average Load Duration Curve</option>
                                 <option value="Bill Distribution">Bill Distribution</option>
                                 <option value="Bill Box Plot">Bill Box Plot</option>
-
                             </select>
                         </div>
+                        <script src="static/plot_results.js"></script>
                     </div>
                 </div>
                 <div id="dual_variable_tab" class="results_tab_content">
@@ -817,8 +818,8 @@
                             </select>
                             <br/>
                             <select id="dual_variable_y_axis" style="width: 80%">
-                                <option value="avg_demand_n_peaks">Average Demand at 'N' Network Peaks</option>
                                 <option value="Annual_kWh">Annual kWh</option>
+                                <option value="avg_demand_n_peaks">Average Demand at 'N' Network Peaks</option>
                                 <option value="avg_demand_n_peaks">Average Demand at 'N' Network Peaks</option>
                                 <option value="avg_demand_n_monthly_peaks">Average Demand at 'N' Network Monthly Peaks</option>
                                 <option value="avg_demand_top_n_peaks">Average Demand at Top 'N' Peaks</option>
