added right click chart export
only works for charts with titles

--- a/templates/index.html
+++ b/templates/index.html
@@ -446,6 +446,10 @@
         <p></p>
     </div>
 
+    <div id="export_dialog" title="Show me the data!" style="display: none">
+        <p></p>
+    </div>
+
     <div id="warning_dialog" title="Warning" style="display: none">
         <p></p>
     </div>
