added error logging and parsing to user

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
     <script src="static/css-element-queries-1.0.0/src/ElementQueries.js"></script>
     <script src="static/end_user_tech.js"></script>
     <script src="static/export.js"></script>
+    <script src="static/errors.js"></script>
 
 
   <style>
@@ -451,6 +452,10 @@
     </div>
 
     <div id="warning_dialog" title="Warning" style="display: none">
+        <p></p>
+    </div>
+
+    <div id="error_dialog" title="Error" style="display: none">
         <p></p>
     </div>
 
