--- a/templates/index.html
+++ b/templates/index.html
@@ -839,7 +839,7 @@
                                 </div>
                                 <div class="col" style="width: 50%">
                                     <div class="label_line" style="width: 70%">One Peak/Day</div>
-                                    <input type="checkbox" style="width: 20%;">
+                                    <input id = "one_peak_per_day" type="checkbox" style="width: 20%;">
                                 </div>
                                 <script src="static/make_n_peak_options.js"></script>
                             </div>
@@ -847,26 +847,26 @@
                                 <div class="row" style="height: 50%;">
                                     <div class="col" style="width: 50%">
                                         <div class="label_line" style="width: 60%">Spring</div>
-                                        <input type="checkbox" style="width: 20%;">
+                                        <input id="spring_check_box" type="checkbox" style="width: 20%;" checked>
                                     </div>
                                     <div class="col" style="width: 50%">
                                         <div class="label_line" style="width: 60%">Autumn</div>
-                                        <input type="checkbox" style="width: 20%;">
+                                        <input id="autumn_check_box" type="checkbox" style="width: 20%;" checked>
                                     </div>
                                 </div>
                                 <div class="row" style="height: 50%;">
                                     <div class="col" style="width: 50%">
                                         <div class="label_line" style="width: 60%">Summer</div>
-                                        <input type="checkbox" style="width: 20%;">
+                                        <input id="summer_check_box" type="checkbox" style="width: 20%;" checked>
                                     </div>
                                     <div class="col" style="width: 50%">
                                         <div class="label_line" style="width: 60%">Winter</div>
-                                        <input type="checkbox" style="width: 20%;">
+                                        <input id="winter_check_box" type="checkbox" style="width: 20%;" checked>
                                     </div>
                                 </div>
                             </div>
-                            <script src="static/plot_results.js"></script>
                         </div>
+                        <script src="static/plot_results.js"></script>
                     </div>
                 </div>
                 <div id="single_case_tab" class="results_tab_content">
