--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -63,11 +63,11 @@
     </div>
     <div class="row" style="overflow: hidden;">
         <button style="width: 80%; text-align: left; height: 3.25vh;"
-                onclick="get_default_case_name()">Apply tariff to load and create case</button>
+                onclick="check_that_a_case_can_be_added()">Apply tariff to load and create case</button>
         <button style="width: 80%; text-align: left; height: 3.25vh;"
-                onclick="delete_tariff()">Delete from active database</button>
+                onclick="delete_tariff(this)">Delete from active database</button>
         <button class="save_mod_button" style="width: 80%; text-align: left; height: 3.25vh;"
-                    onclick="get_tariff_then_save(this)">Save new version of tariff</button>
+                    onclick="check_there_are_parameters_to_save(this)">Save new version of tariff</button>
     </div>
 </div>
 
