updates after merging the master into make_graphs

--- a/templates/index.html
+++ b/templates/index.html
@@ -994,6 +994,7 @@
                                 <select class="y_peak_options" id="y_n_peaks_select" style="width: 80%;"></select>
                                 <script src="static/make_n_peak_options.js"></script>
                             </div>
+                            <script src="static/plot_results.js"></script>
                             <div class="col">
                                 <div class="x_peak_options label_stacked" style="width: 70%; white-space: nowrap;">
                                     One Peak/Day
@@ -1007,6 +1008,7 @@
                                 <input class="x_peak_options input_stacked" id="x_one_peak_a_day" type="checkbox">
                                 <input class="y_peak_options input_stacked" id="y_one_peak_a_day" type="checkbox">
                             </div>
+                            <script src="static/plot_results.js"></script>
                         </div>
                         <div id="select_seasons" class="col" style="width: 24%; float: left; min-width: 200px">
                             <div class="col" style="width: 50%;">
