--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
     <script src="static/end_user_tech.js"></script>
     <script src="static/export.js"></script>
     <script src="static/errors.js"></script>
+    <script src="static/tou_analysis.js"></script>
 
 
   <style>
